<?xml version="1.0"?>
<package format="2">
  <name>puma_drive</name>
  <version>1.0.0</version>
  <description>Package for driving the robot</description>

  <maintainer email="gabirat@onet.pl">pi</maintainer>
  <license>BSD</license>
  <author email="gabirat@onet.pl">Gabriel Ratajczak</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-rpi.gpio</exec_depend>
</package>
